--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: deployment-devops-exam
+  name: deployment-q6
 spec:
   replicas: 3
   selector:
